assets/styles/common.css
:root {
    --main: #1989e6;
    --sub: #fa6e22;
    --white: #ffffff;
    --text-copyright: #666666;
    --text-gnb: #888888;
    --text-main: #111111;
    --text-white: #ffffff;
}

html, body {
    font-size: 10px;
    letter-spacing: -0.03rem;
}

a {
    color: inherit;
    text-decoration: none;
}

#wrapper {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 100vh;
    overflow: hidden;
}

main {
    display: flex;
    flex: 1;
    flex-direction: column;
    padding: 8.5rem 0 9rem;
    width: 100%;
}

.container {
    margin: 0 auto;
    max-width: 146rem;
    width: 100%;
}

header {
    box-sizing: border-box;
    height: 8.5rem;
    left: 0;
    padding: 2rem 0;
    position: fixed;
    right: 0;
    top: 0;
}

header .container {
    align-items: center;
    display: flex;
    justify-content: space-between;
}

header h1 img {
    width: 20.6rem;
}

.gnb {
    display: flex;
    gap: 6rem;
}

.gnb a {
    color: var(--text-gnb);
    font-size: 1.6rem;
    font-weight: 600;
}

.gnb a.active {
    color: var(--main);
}

.btn {
    align-items: baseline;
    background-color: var(--main);
    border-radius: 2.5rem;
    color: var(--text-white);
    display: inline-flex;
    font-size: 1.6rem;
    font-weight: 600;
    gap: 1.4rem;
    padding: 1.7rem 2.5rem 1.5rem;
}

.btn-sub {
    background-color: var(--sub);
    color: var(--text-white)
}

.btn-sm {
    font-size: 1.4rem;
    padding: 0.8rem 1.5rem 0.7rem;
}

.btn-white {
    background-color: var(--white);
    color: var(--text-main)
}

.copyright {
    align-items: center;
    bottom: 0;
    display: flex;
    flex-direction: column;
    height: 9.5rem;
    justify-content: center;
    left: 0;
    position: fixed;
    right: 0;
    width: 100%;
}

.copyright p {
    color: var(--text-copyright);
    font-size: 1.6rem;
    font-weight: 500;
    letter-spacing: -0.05rem;
    text-align: center;
}

.shadow {
    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
}

.shadow-sm {
    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.05);
}

